--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.6.0
 Babel==2.12.1
 Pillow==9.5.0
-sqlparse==0.4.3
 tkcalendar==1.6.1
 macholib==1.16.2
-pytz  ==2022.7.1
+pytz==2022.7.1
+DateTime==5.0
+macholib==1.16.2
+tkmacosx==1.0.5
+
+
 
 
 
